Unique loc for ööselids&australia

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -206,7 +206,7 @@ PROV1210;Faizabad;;;;;;;;;;;;;
 PROV8;Kuala Kelantan;;;;;;;;;;;;;
 PROV10;San Khew Jong;;;;;;;;;;;;;
 PROV3275;Kapoea;;;;;;;;;;;;;
-PROV3276;Latogatold;;;;;;;;;;;;;
+PROV3276;Látogatóld;;;;;;;;;;;;;
 PROV3277;Hlucin;;;;;;;;;;;;;
 PROV3278;Manifa;;;;;;;;;;;;;
 PROV3279;Mak'simiakert;;;;;;;;;;;;;
@@ -387,11 +387,46 @@ PROV2601;Wilkinkarra;;;;;;;;;;;;;
 PROV2495;Tirari;;;;;;;;;;;;;
 PROV1990;Kindu;;;;;;;;;;;;;
 PROV1991;Rusozi;;;;;;;;;;;;;
-PROV2471;Bathurst;;;;;;;;;;;;;
-PROV2496;Nullarbor;;;;;;;;;;;;;
 PROV2603;Chanamee;;;;;;;;;;;;;
+PROV2501;Stuurjelgi;;;;;;;;;;;;
+PROV2604;Sludduløsdiku;;;;;;;;;;;;
+PROV2505;Vilkestivii;;;;;;;;;;;;;
+PROV2506;Kjeduunagu;;;;;;;;;;;;
 PROV2507;Mparntwe;;;;;;;;;;;;;
-PROV2505;Port Essington;;;;;;;;;;;;;
+PROV2468;Óðinsbörg;;;;;;;;;;;;
+PROV2469;Jarnkastalækur;;;;;;;;;;;;
+PROV2471;Skollótthæðir;;;;;;;;;;;;;
+PROV2470;Hákarlhöfn;;;;;;;;;;;;
+PROV2472;Gróskuklájur;;;;;;;;;;;;
+PROV2473;Kraekjunlanða;;;;;;;;;;;;
+PROV2474;Risandisól;;;;;;;;;;;;
+PROV2476;Járnfløabörg;;;;;;;;;;;;
+PROV2477;Skalalond;;;;;;;;;;;;
+PROV2478;Hvildarstaður;;;;;;;;;;;;
+PROV2479;Vesturhafnárflói;;;;;;;;;;;;
+PROV2480;Neydárkallárhæðir;;;;;;;;;;;;
+PROV2481;Hjártanstad;;;;;;;;;;;;
+PROV2482;Fjárlæg Eyja;;;;;;;;;;;;;
+PROV2483;Þórsbörg;;;;;;;;;;;;
+PROV2484;Fulltagulli;;;;;;;;;;;;
+PROV2485;Grænarjarðir;;;;;;;;;;;;
+PROV2486;Garðabörg;;;;;;;;;;;;
+PROV2487;Hrækjælði;;;;;;;;;;;;
+PROV2488;Køhvutvedd;;;;;;;;;;;;
+PROV2490;Charleville;;;;;;;;;;;;
+PROV2491;Ástríðahöfn;;;;;;;;;;;;
+PROV2492;Eyreskági;;;;;;;;;;;;
+PROV2493;Steinnfiskihöfn;;;;;;;;;;;;
+PROV2494;Videndafløabörg;;;;;;;;;;;;
+PROV2496;Vatnslauslettur;;;;;;;;;;;;;
+PROV2498;Járnabustad;;;;;;;;;;;;
+PROV2504;Vønarinnárlond;;;;;;;;;;;;
+ENG_2468;Stórskogálond;;;;;;;;;;;;
+ENG_2476;Vestalanðid;;;;;;;;;;;;
+ENG_2483;Kónungslond;;;;;;;;;;;;
+ENG_2491;Strönðmárgragola;;;;;;;;;;;;
+ENG_2497;Semnyradeyjunlanða;;;;;;;;;;;;
+ENG_2505;Northern Territory;;;;;;;;;;;;
 RUS_973;Kherson-Zaporizhia;;;;;;;;;;;;;
 RUS_955;Yekaterinoslav;;;;;;;;;;;;;
 PROV3107;Lake Baikal;;;;;;;;;;;;;
@@ -455,7 +490,6 @@ PROV1540;Nantong;;;;;;;;;;;;;
 PROV2526;Palmyra and Line Islands;;;;;;;;;;;;;
 TIB_1591;Tibetan Plateau;;;;;;;;;;;;;
 PEU_2289;Oriente;;;;;;;;;;;;;
-PROV2482;Van Diemen's Land;;;;;;;;;;;;;
 PROV2382;Laboulaye;;;;;;;;;;;;;
 PROV1071;Qeshm;;;;;;;;;;;;;
 PROV2786;Gulf of Oman;;;;;;;;;;;;;
@@ -701,15 +735,52 @@ DAI_1380;Cochinchina;;;;;;;;;;;;;
 ENG_1384;Southern Malaya;;;;;;;;;;;;;
 ENG_1391;Northern Malaya;;;;;;;;;;;;;
 SIA_1392;Lavo;;;;;;;;;;;;;
-BRU_1394;West Borneo;;;;;;;;;;;;;
-BRU_1396;North Borneo;;;;;;;;;;;;;
-NET_1413;West Java;;;;;;;;;;;;;
-NET_1418;East Java;;;;;;;;;;;;;
-NET_1423;East Borneo;;;;;;;;;;;;;
-NET_1426;South Borneo;;;;;;;;;;;;;
+BRU_1394;Laans-Rõhelimetsämaa;;;;;;;;;;;;;
+BRU_1396;Põhja-Rõhelimetsämaa;;;;;;;;;;;;;
+NET_1413;Laans-Öökaugesaare;;;;;;;;;;;;;
+NET_1418;Idaa-Öökaugesaare;;;;;;;;;;;;;
+NET_1423;Etelna-Rõhelimetsämaa;;;;;;;;;;;;;
+NET_1426;Idaa-Rõhelimetsämaa;;;;;;;;;;;;;
+BAL_1438;Tüühandsaaremaed;;;;;;;;;;;;;
 NET_1446;Timor;;;;;;;;;;;;;
-NET_1447;Moluccas;;;;;;;;;;;;;
-NET_1449;Celebes;;;;;;;;;;;;;
+NET_1447;Kinõversaare;;;;;;;;;;;;;
+NET_1449;Raudäsaare;;;;;;;;;;;;;
+NET_1451;Bátorsziget;;;;;;;;;;;;;
+SPA_1463;Lahanepõõlisaared;;;;;;;;;;;;
+PROV1397;Kaunispunki;;;;;;;;;;;;
+PROV1417;Viiskülkkindlus;;;;;;;;;;;;;
+PROV1418;Esitatüdirm;;;;;;;;;;;;;
+PROV1419;Siskeesi Pühakoht;;;;;;;;;;;;;
+PROV1420;Muuttilinenjõglinn;;;;;;;;;;;;;
+PROV1421;Vaike Turüsaare;;;;;;;;;;;;;
+PROV1422;Siseskülalut;;;;;;;;;;;;;
+PROV1423;Soolajõelinn;;;;;;;;;;;;;
+PROV1424;Kis Magyarváros;;;;;;;;;;;;;
+PROV1425;Jühlapaikka;;;;;;;;;;;;;
+PROV1427;Sürpühasait;;;;;;;;;;;;;
+PROV1429;Sesumuhosu;;;;;;;;;;;;;
+PROV1430;Makassar;;;;;;;;;;;;;
+PROV1431;Harlausikrüpt;;;;;;;;;;;;
+PROV1432;Kõrgemälinn;;;;;;;;;;;;;
+PROV1433;Kaugelinn;;;;;;;;;;;;;
+PROV1434;Õilismõõk;;;;;;;;;;;;;
+PROV1435;Äädiorg;;;;;;;;;;;;;
+PROV1436;Lugar de Paz;;;;;;;;;;;;;
+PROV1437;Andam-Hallintosaare;;;;;;;;;;;;;
+PROV1439;Kristusekirik;;;;;;;;;;;;;
+PROV1441;Kahepoolne Pühakoht;;;;;;;;;;;;;
+PROV1447;Vaprussaare;;;;;;;;;;;;;
+PROV1448;Szegfuszegváros;;;;;;;;;;;;;
+PROV1449;Õikeusilmeattisaare;;;;;;;;;;;;;
+PROV1450;Äärelinn;;;;;;;;;;;;;
+PROV1451;Kuningaidesaare;;;;;;;;;;;;;
+PROV1452;Zuhanojszakaiszigetek;;;;;;;;;;;;;
+PROV1453;Garudaerod;;;;;;;;;;;;;
+PROV1454;Gyozelemiváros;;;;;;;;;;;;;
+PROV1462;Sildümisköht;;;;;;;;;;;;
+PROV1463;Valjaskõrlasiköht;;;;;;;;;;;;
+PROV1464;Sadam Moonika;;;;;;;;;;;;;
+PROV1560;Teljesítopart;;;;;;;;;;;;;
 CHI_1465;Eastern Mongolia;;;;;;;;;;;;;
 CHI_1468;Western Mongolia;;;;;;;;;;;;;
 CHI_1470;South Anhui;;;;;;;;;;;;;
@@ -956,7 +1027,7 @@ PROV825;Kavala;;;;;;;;;;;;;
 PROV2729;Côte D'Argent;;;;;;;;;;;;;
 PROV2750;Côte D'Azur;;;;;;;;;;;;;
 PROV3539;Mar Chiquita;;;;;;;;;;;;;
-PROV3540;Jaensong;;;;;;;;;;;;;
+PROV3540;Jaensõng;;;;;;;;;;;;;
 PROV3541;Valine Makassar;;;;;;;;;;;;;
 PROV3542;Powo;;;;;;;;;;;;;
 PROV3543;Hor;;;;;;;;;;;;;
