White Huns setup

--- a/KOS/localisation/000_persia_map_countries.csv
+++ b/KOS/localisation/000_persia_map_countries.csv
@@ -93,8 +93,8 @@ KHI_parliamentary_republic_ADJ;Khorezm;;;;;;;;;;;;;
 KHI_fascist_dictatorship_ADJ;Khorezm;;;;;;;;;;;;;
 KHI_presidential_dictatorship_ADJ;Khorezm;;;;;;;;;;;;;
 KHI_proletarian_dictatorship_ADJ;Khorezm;;;;;;;;;;;;;
-KHR_ADJ;Khorasani;Khorasani;Khorasani;;;;;;;;;;;
-KHR;Khorasan;Khorasan;Khorasan;;;;;;;;;;;
+KHR_ADJ;Zhunbil;Zhunbil;Zhunbil;;;;;;;;;;;
+KHR;Zabulistan;Zabulistan;Zabulistan;;;;;;;;;;;
 KHR_proletarian_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
 KHR_presidential_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
 KHR_parliamentary_republic;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
