--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -231,6 +231,13 @@ MRM;Marmarica;x;;;;
 MRM_ADJ;Marmariki;x;;;;
 ARI;Ariania;x;;;;
 ARI_ADJ;Arianite;x;;;;
+WHU;White Huns;x;;;;
+WHU_ADJ;White Hun;x;;;;
+WHU_absolute_empire;Empire of the White Huns;;;;;;;;;;;;;
+WHU_semi_constitutional_empire;Empire of the White Huns;;;;;;;;;;;;;
+WHU_constitutional_empire;Empire of the White Huns;;;;;;;;;;;;;
+SHH;Shahis;x;;;;
+SHH_ADJ;Shahis;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -596,6 +603,12 @@ vinlandic;Vinlandic;x;;;;
 kvaani;Kvaani;x;;;;
 siwa;Siwa;x;;;;
 afro_phoenician;Afro-Phoenician;x;;;;
+wa;Wa;x;;;;
+aryao;Aryao;x;;;;
+sogdian;Sogdian;x;;;;
+saka;Saka;x;;;;
+shashi_aryao;Shashi-Aryao;x;;;;
+chorasmian;Chorasmian;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
