Gyolzelesziget Improve (Papua) (pop unfinished)

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -307,8 +307,8 @@ PROV3262;Belluno;;;;;;;;;;;;;
 PROV3261;Pescara;;;;;;;;;;;;;
 PROV2351;Magdalena;;;;;;;;;;;;;
 PROV3260;Sado;;;;;;;;;;;;;
-PROV1531;Tombara;;;;;;;;;;;;;
-PROV2537;Birara;;;;;;;;;;;;;
+PROV1531;Új Szegfusziget;;;;;;;;;;;;;
+PROV2537;Görbesziget;;;;;;;;;;;;;
 PROV158;Grand Portage;;;;;;;;;;;;;
 PROV29;Kyzylkum;;;;;;;;;;;;;
 PROV2595;Nunavut;;;;;;;;;;;;;
@@ -747,6 +747,8 @@ NET_1447;Kinõversaare;;;;;;;;;;;;;
 NET_1449;Raudäsaare;;;;;;;;;;;;;
 NET_1451;Bátorsziget;;;;;;;;;;;;;
 SPA_1463;Lahanepõõlisaared;;;;;;;;;;;;
+GER_2530;Északi Bátorsziget;;;;;;;;;;;;;
+AST_2528;Öbölpart;;;;;;;;;;;;;
 PROV1397;Kaunispunki;;;;;;;;;;;;
 PROV1417;Viiskülkkindlus;;;;;;;;;;;;;
 PROV1418;Esitatüdirm;;;;;;;;;;;;;
@@ -781,6 +783,10 @@ PROV1462;Sildümisköht;;;;;;;;;;;;
 PROV1463;Valjaskõrlasiköht;;;;;;;;;;;;
 PROV1464;Sadam Moonika;;;;;;;;;;;;;
 PROV1560;Teljesítopart;;;;;;;;;;;;;
+PROV2528;Käärented Kiköto;;;;;;;;;;;;
+PROV2529;Sokfolyóváros;;;;;;;;;;;;
+PROV2530;Kertváros;;;;;;;;;;;;
+PROV2531;Kereskeváros;;;;;;;;;;;;
 CHI_1465;Eastern Mongolia;;;;;;;;;;;;;
 CHI_1468;Western Mongolia;;;;;;;;;;;;;
 CHI_1470;South Anhui;;;;;;;;;;;;;
@@ -1200,3 +1206,12 @@ PROV3709;Tarantas;;;;;;;;;;;;;
 PROV3710;Termele;;;;;;;;;;;;;
 PROV3711;Simmern;;;;;;;;;;;;;
 PROV3712;Julich;;;;;;;;;;;;;
+PROV3713;Kókusziget;;;;;;;;;;;;;
+PROV3714;Szabályszi;;;;;;;;;;;;;
+PROV3715;Ikersziget;;;;;;;;;;;;;
+PROV3716;Dohánysziget;;;;;;;;;;;;;
+PROV3717;Fokföld;;;;;;;;;;;;;
+PROV3718;Belsodzsungek;;;;;;;;;;;;;
+PROV3719;Rikítóváros;;;;;;;;;;;;;
+PROV3720;Belsopokol;;;;;;;;;;;;;
+PROV3721;Bételdióváros;;;;;;;;;;;;;
