--- a/KOS/localisation/0_Names.csv
+++ b/KOS/localisation/0_Names.csv
@@ -365,9 +365,9 @@ LGB;Longobardia;Longobardie;Langobardenreich;Longobardowie;Langobardia;Longobard
 LGB_ADJ;Longobard;Longobarde;Langobardisch;Longobardowie;Langobardo;Longobarda;Longobárd;Longobard;Longobárd;Longobard;Langobardo;Ëîíãîáàğä;Longobard;
 LIE;Liechtenstein;Liechtenstein;Liechtenstein;Liechtenstein;Liechtenstein;Liechtenstein;Liechtenstein;Lichtenštejnsko;Liechtenstein;Liechtenstein;Liechtenstein;Ëèõòåíøòåéí;Liechtenstein;
 LIE_ADJ;Liechtensteiner;Liechtensteinois;Liechtensteinisch;Liechtensteiner;Liechtensteiner;Liechtensteiniana;Liechtensteiner;Liechtensteiner;Liechtensteiner;Liechtensteiner;Liechtensteiner;Ëèõòåíøòåéíñê.;Liechtensteiner;
-LIV;Livomo;Livomo;Livomo;inflanckiemu;La Orden de Livonia;L'Ordine di Livonia;livóniai rendelés;Livonského rádu;livóniai rendelés;het Lijflandse Orde;A Ordem Livoniana;Ëèâîíñêèé Îğäåí;ritarikunnan;
-LIV_ADJ;Livomo;Livomo;Livomo;Livomo;Livomo;Livomo;liv;Livonian;liv;Livonian;Livonian;Ëèâîíñê.;Liivin;
-LIV_democracy;Livomo;Livomo;Livomo;Liwonia;Livonia;Livonia;Livonia;Livonia;Livonia;Lijfland;Livônia;Ëèâîíèÿ;Livonia;
+LIV;Livõmo;Livõmo;Livõmo;inflanckiemu;La Orden de Livonia;L'Ordine di Livonia;livóniai rendelés;Livonského rádu;livóniai rendelés;het Lijflandse Orde;A Ordem Livoniana;Ëèâîíñêèé Îğäåí;ritarikunnan;
+LIV_ADJ;Livõmo;Livõmo;Livõmo;Livõmo;Livõmo;Livõmo;liv;Livonian;liv;Livonian;Livonian;Ëèâîíñê.;Liivin;
+LIV_democracy;Livõmo;Livõmo;Livõmo;Liwonia;Livonia;Livonia;Livonia;Livonia;Livonia;Lijfland;Livônia;Ëèâîíèÿ;Livonia;
 LND;Lunda;Lundas;Lunda;Lunda;Lunda;Lunda;Lunda;Lunda;Lunda;Lunda;Lunda;Ëóíäà;Lunda;
 LND_ADJ;Lundan;Lunda;Lunda-;Lundy;Lunda;di Lunda;Lundan;Lundan;Lundan;Lundan;Lundan;Ëóíäàíñê.;Lundan;
 LOU;Louisiana;Louisiane;Louisiana;Luizjana;Louisiana;Luigiana;Louisiana;Louisiana;Louisiana;Louisiana;Louisiana;Ëóèçèàíà;Louisiana;
