--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -1,7 +1,7 @@
-OOS;Ooselmaa;x;;;;
-OOS_ADJ;Ooselid;x;;;;
-MGI;Magimaa;x;;;;
-MGI_ADJ;Magihid;x;;;;
+OOS;Ööselmaa;x;;;;
+OOS_ADJ;Ööselid;x;;;;
+MGI;Mägimaa;x;;;;
+MGI_ADJ;Mägihid;x;;;;
 GYO;Gyozelesziget;x;;;;
 GYO_ADJ;Gyozeleszi;x;;;;
 INK;Inkriimaa;x;;;;
@@ -10,8 +10,8 @@ KIK;Katnikki;x;;;;
 KIK_ADJ;Katnikkid;x;;;;
 VUT;Vuthuilia;x;;;;
 VUT_ADJ;Katnikkid;x;;;;
-KNT;Kantapuumaa;x;;;;
-KNT_ADJ;Kantapuun;x;;;;
+KNT;Kantäpüümaa;x;;;;
+KNT_ADJ;Kantäpüün;x;;;;
 KAU;Kaupmeesmaa;x;;;;
 KAU_ADJ;Kaupmeesid;x;;;;
 SHN;Great Shun;;;;;;;;;;;;;;x;;;;;;;;;;;;;;
@@ -40,11 +40,11 @@ MSA;Masaesyli;x;;;;
 MSA_ADJ;Masaesylit;x;;;;
 MSL;Massylii;x;;;;
 MSL_ADJ;Massyliit;x;;;;
-SZA;Szaszok;x;;;;
-SZA_ADJ;Cuman;x;;;;
+SZA;Szászok;x;;;;
+SZA_ADJ;Kunság;x;;;;
 HLC;Halics;x;;;;
 HLC_ADJ;Halicsiai;x;;;;
-LDM;Vizselohorszag;x;;;;
+LDM;Vizselohország;x;;;;
 LDM_ADJ;Vizseloh;x;;;;
 HIS;Histria;x;;;;
 HIS_ADJ;Histri;x;;;;
@@ -62,16 +62,16 @@ AGL;Angeln;x;;;;
 AGL_ADJ;Angle;x;;;;
 SMG;Samogovia;x;;;;
 SMG_ADJ;Samogovian;x;;;;
-PRE;Preitsomaa;x;;;;
+PRE;Preitsõmaa;x;;;;
 PRE_ADJ;Preitsii;x;;;;
-VOR;Voromaa;x;;;;
-VOR_ADJ;Voro;x;;;;
-VAI;Vainalinn;x;;;;
-VAI_ADJ;Vainalid;x;;;;
-HRO;Hrodna;x;;;;
-HRO_ADJ;Hrondnai;x;;;;
-VAA;Vaalasadoo;x;;;;
-VAA_ADJ;Vaalasad;x;;;;
+VOR;Võromaa;x;;;;
+VOR_ADJ;Võro;x;;;;
+VAI;Väinalinn;x;;;;
+VAI_ADJ;Väinalid;x;;;;
+HRO;Hrõdna;x;;;;
+HRO_ADJ;Hrõndnai;x;;;;
+VAA;Vaaläsadoo;x;;;;
+VAA_ADJ;Vaaläsad;x;;;;
 BUT;Butsiek;x;;;;
 BUT_ADJ;Butsieker;x;;;;
 TNS;Turnstadt;x;;;;
@@ -80,28 +80,28 @@ STO;Setomaa;x;;;;
 STO_ADJ;Setos;x;;;;
 BLG;Bolgharia;x;;;;
 BLG_ADJ;Bolghar;x;;;;
-MOO;Moodatsamaa;x;;;;
-MOO_ADJ;Moodii;x;;;;
+MOO;Möödatsamaa;x;;;;
+MOO_ADJ;Möödii;x;;;;
 OHI;Ohitsevomaa;x;;;;
 OHI_ADJ;Ohitsemid;x;;;;
-VGL;Volgmeletiorszag;x;;;;
-VGL_ADJ;Volgmyi;x;;;;
-ETL;Etelkoz;x;;;;
-ETL_ADJ;Etelkozi;x;;;;
-VEP;Vepsamaa;x;;;;
+VGL;Völgmeletiország;x;;;;
+VGL_ADJ;Völgmyi;x;;;;
+ETL;Etelköz;x;;;;
+ETL_ADJ;Etelközi;x;;;;
+VEP;Vepsämaa;x;;;;
 VEP_ADJ;Veps;x;;;;
 KRE;Krevinmaa;x;;;;
 KRE_ADJ;Krevin;x;;;;
-FNG;Finogorimaald;x;;;;
+FNG;Finõgorimaald;x;;;;
 FNG_ADJ;Finogorok;x;;;;
-SOO;Soorejonelinn;x;;;;
-SOO_ADJ;Soorelid;x;;;;
+SOO;Söörejõnelinn;x;;;;
+SOO_ADJ;Söörelid;x;;;;
 VIE;Vienajmaa;x;;;;
 VIE_ADJ;Vienapsi;x;;;;
-LEV;Levedia;x;;;;
-LEV_ADJ;Levedi;x;;;;
-LUU;Luudimaa;x;;;;
-LUU_ADJ;Luudi;x;;;;
+LEV;Levédia;x;;;;
+LEV_ADJ;Levédi;x;;;;
+LUU;Lüüdimaa;x;;;;
+LUU_ADJ;Lüüdi;x;;;;
 YML;Onenjocije;x;;;;
 YML_ADJ;Onenets;x;;;;
 KTA;Mansia-Khantia;x;;;;
@@ -117,8 +117,8 @@ SHR_absolute_monarchy;Shor Khanate;x;;;;
 SHR_hms_government;Shor Khanate;x;;;;
 SHR_prussian_constitutionalism;Shor Khanate;x;;;;
 SHR_ADJ;Shor;x;;;;
-REG;Regy-Magyarorszag;x;;;;
-REG_ADJ;Regymagyar;x;;;;
+REG;Régy-Magyarország;x;;;;
+REG_ADJ;Régymagyar;x;;;;
 CUM;Kummagyaria;x;;;;
 CUM_ADJ;Kummagyar;x;;;;
 ANK;Rum Khanate;x;;;;
@@ -309,7 +309,7 @@ KAU_radical_2;Reformierakond;x;;;;
 KAU_socialist;Sotsialistlik Partei;x;;;;
 KAU_communist;Tooliste Liikumine;x;;;;
 KAU_fascist;Radikaalne Rahvusrinne;x;;;;
-ooselid;Ooselid;x;;;;
+ooselid;Ööselid;x;;;;
 neo_nordic;Neo-Nordic;x;;;;
 tibetic;Tibetic;x;;;;
 eastern_tibeto_burman;Tibeto-Burman;x;;;;
@@ -355,19 +355,19 @@ kabyle;Kabyle;x;;;;
 tuareg;Tuareg;x;;;;
 tuzzungiyya;Tuzzungiyya;x;;;;
 guanche;Guanche;x;;;;
-saarkorge;Saarkorge;x;;;;
+saarkorge;Saarkõrge;x;;;;
 saarmadal;Saarmadal;x;;;;
 saarnordlig;Saarnordlig;x;;;;
 szigetinyel;Szigetinyel;x;;;;
 saarnisaar;Saarnisaar;x;;;;
-saarmagi;Saarmagi;x;;;;
+saarmagi;Saarmägi;x;;;;
 saarhalaslik;Saarhalaslik;x;;;;
 inkriid;Inkriid;x;;;;
-loviikind;Loviikind;x;;;;
+loviikind;Lõviikind;x;;;;
 saarkatnik;Saarkatnik;x;;;;
 saarkaupmid;Saarkaupmid;x;;;;
 vigrid;Vigrid;x;;;;
-norraenska;Norraenska;x;;;;
+norraenska;Norrænska;x;;;;
 siebenburger;Transylvanian-Saxon;x;;;;
 sicilian;Sicilian;x;;;;
 lombard;Lombard;x;;;;
