Gyozelesziget pops finished

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -609,6 +609,8 @@ sogdian;Sogdian;x;;;;
 saka;Saka;x;;;;
 shashi_aryao;Shashi-Aryao;x;;;;
 chorasmian;Chorasmian;x;;;;
+latogatorok;Látogatórok;x;;;;
+batorok;Bátorok;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Paganism;x;;;;
