--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1215,3 +1215,14 @@ PROV3718;Belsodzsungek;;;;;;;;;;;;;
 PROV3719;Rikítóváros;;;;;;;;;;;;;
 PROV3720;Belsopokol;;;;;;;;;;;;;
 PROV3721;Bételdióváros;;;;;;;;;;;;;
+PROV3722;Suurkrüpta;;;;;;;;;;;;;
+PROV3723;Õhukesaare;;;;;;;;;;;;;
+PROV3724;Lyykuvasaare;;;;;;;;;;;;;
+PROV3725;Küllaussaare;;;;;;;;;;;;;
+PROV3726;Koprääsaare;;;;;;;;;;;;;
+PROV3727;Haavämaa;;;;;;;;;;;;;
+PROV3728;Keseon;;;;;;;;;;;;;
+PROV3729;Hangean-seom;;;;;;;;;;;;;
+PROV3730;Oejel-ui Sinjeon;;;;;;;;;;;;;
+PROV3731;Hyeongean;;;;;;;;;;;;;
+PROV3732;Bulagoneun;;;;;;;;;;;;;
