--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -238,6 +238,8 @@ WHU_semi_constitutional_empire;Empire of the White Huns;;;;;;;;;;;;;
 WHU_constitutional_empire;Empire of the White Huns;;;;;;;;;;;;;
 SHH;Shahis;x;;;;
 SHH_ADJ;Shahis;x;;;;
+PNC;Pinancheou;x;;;;
+PNC_ADJ;Pinanchein;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
