--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -511,17 +511,13 @@ kivruli;Kivruli;x;;;;
 svan;Svan;x;;;;
 megrelian;Megrelian;x;;;;
 yevanic;Yevanic;x;;;;
-tatlar;Crimean Greek;x;;;;
 cappadocian;Cappadocian;x;;;;
 tsakonian;Tsakonian;x;;;;
 pontic;Pontic;x;;;;
-chaldiot;Chaldiot Pontic;x;;;;
 trapezuntine;Trapezuntine;x;;;;
 bithynian;Bithynian;x;;;;
 thraikes;Thraikes;x;;;;
-aeolic;Aeolic;x;;;;
-ionic;Ionic;x;;;;
-dodecanese;Dodecanese;x;;;;
+aeolic;Aeolic-Ionic;x;;;;
 lycian;Lycian;x;;;;
 pamphylian;Pamphylian;x;;;;
 carian;Carian;x;;;;
@@ -537,13 +533,8 @@ trojan;Trojan;x;;;;
 lycaonian;Lycaonian;x;;;;
 galatian;Galatian;x;;;;
 cypriot;Cypriot;x;;;;
-epirote;Epirote;x;;;;
-ionian;Ionian;x;;;;
-peloponnese;Peloponnese;x;;;;
 maniot;Maniot;x;;;;
 cretan;Cretan;x;;;;
-euboean;Euboean;x;;;;
-thessalian;Thessalian;x;;;;
 neo_punic;Neo-Punic;x;;;;
 el_armenian;El Armenian;x;;;;
 ge_armenian;Ge Armenian;x;;;;
