central mexico pops & cultures + misc fixes

--- a/KOS/localisation/new-province-region-localisation.csv
+++ b/KOS/localisation/new-province-region-localisation.csv
@@ -9,3 +9,10 @@ MEX_2170;Mixtecahtlan;;;;;;;;;;;;;
 MEX_2172;Mexihco;;;;;;;;;;;;;
 MEX_2181;Chiappan;;;;;;;;;;;;;
 MEX_2173;Tzapotecahtlan;;;;;;;;;;;;
+zapotec;Tzapotecah;;;;;;;;;;;;;
+tarascan;Michhuaque;;;;;;;;;;;;;
+huastec;Huaxtecatl;;;;;;;;;;;;;
+mixtec;Mixtecah;;;;;;;;;;;;;
+totonac;Totonacatl;;;;;;;;;;;;;
+chichimec;Chichimecatl;;;;;;;;;;;;;
+mexican;Xaliscotl;;;;;;;;;;;;;
