pre-setup for japan with Oda Shogunate

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -1239,14 +1239,14 @@ JOR_radical;Al Anarkiliberali;;;;;;;;;;;;;
 JOR_socialist;Hizb al-Baath al-Ishtiraki al-Urduni;;;;;;;;;;;;;
 JOR_communist;Al-Hizb al-Shuyui al-Urduni;;;;;;;;;;;;;
 JOR_fascist;Hizb al-Mustaqbal;;;;;;;;;;;;;
-KAG;Ishikawa;;;;;;;;;;;;;
-KAG_ADJ;Ishikawan;;;;;;;;;;;;;
-KAG_absolute_monarchy;Kaga;;;;;;;;;;;;;
-KAG_prussian_constitutionalism;Kaga;;;;;;;;;;;;;
-KAG_hms_government;Kaga;;;;;;;;;;;;;
-KAG_absolute_monarchy_ADJ;Maeda;;;;;;;;;;;;;
-KAG_prussian_constitutionalism_ADJ;Maeda;;;;;;;;;;;;;
-KAG_hms_government_ADJ;Maeda;;;;;;;;;;;;;
+KAG;Nagoya;;;;;;;;;;;;;
+KAG_ADJ;Nagoya;;;;;;;;;;;;;
+KAG_absolute_monarchy;Oda Shogunate;;;;;;;;;;;;;
+KAG_prussian_constitutionalism;Oda Shogunate;;;;;;;;;;;;;
+KAG_hms_government;Oda Shogunate;;;;;;;;;;;;;
+KAG_absolute_monarchy_ADJ;Oda;;;;;;;;;;;;;
+KAG_prussian_constitutionalism_ADJ;Oda;;;;;;;;;;;;;
+KAG_hms_government_ADJ;Oda;;;;;;;;;;;;;
 KAM;Kamchatka;;;;;;;;;;;;;
 KAM_ADJ;Kamchatkan;;;;;;;;;;;;;
 KAM_presidential_dictatorship;Far Eastern Republic;;;;;;;;;;;;;
@@ -2211,7 +2211,7 @@ TAS_radical;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;;
 TAS_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
 TCA;Transcaucasia;;;;;;;;;;;;;
 TCA_ADJ;Transcaucasian;;;;;;;;;;;;;
-TKG;The Tokugawa Shogunate;;;;;;;;;;;;;
+TKG;Tokugawa;;;;;;;;;;;;;
 TKG_ADJ;Tokugawa;;;;;;;;;;;;;
 TKG_reactionary;Tokugawa-shi;;;;;;;;;;;;;
 TKG_fascist;Kokuryukai;;;;;;;;;;;;;
