--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -824,9 +824,9 @@ CHI_constitutional_empire;The Empire of China;;;;;;;;;;;;;
 CHI;China;;;;;;;;;;;;;
 CHO;Chugoku;;;;;;;;;;;;;
 CHO_ADJ;Chugokuan;;;;;;;;;;;;;
-CHO_absolute_monarchy;Choshu;;;;;;;;;;;;;
-CHO_prussian_constitutionalism;Choshu;;;;;;;;;;;;;
-CHO_hms_government;Choshu;;;;;;;;;;;;;
+CHO_absolute_monarchy;Amago;;;;;;;;;;;;;
+CHO_prussian_constitutionalism;Amago;;;;;;;;;;;;;
+CHO_hms_government;Amago;;;;;;;;;;;;;
 CHO_absolute_monarchy_ADJ;Mori;;;;;;;;;;;;;
 CHO_prussian_constitutionalism_ADJ;Mori;;;;;;;;;;;;;
 CHO_hms_government_ADJ;Mori;;;;;;;;;;;;;
@@ -1966,11 +1966,11 @@ SAS_reactionary;Radical Nationalists;Radical Nationalists;Radical Nationalists;;
 SAS_reactionary_2;Country Party;Country Party;Country Party;;;;;;;;;;;
 SAS_radical;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;;
 SAS_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
-SAT;Kyushu;;;;;;;;;;;;;
-SAT_ADJ;Kyushuan;;;;;;;;;;;;;
-SAT_absolute_monarchy;Satsuma;;;;;;;;;;;;;
-SAT_prussian_constitutionalism;Satsuma;;;;;;;;;;;;;
-SAT_hms_government;Satsuma;;;;;;;;;;;;;
+SAT;Satsuma;;;;;;;;;;;;;
+SAT_ADJ;Satsuma;;;;;;;;;;;;;
+SAT_absolute_monarchy;Shimazu;;;;;;;;;;;;;
+SAT_prussian_constitutionalism;Shimazu;;;;;;;;;;;;;
+SAT_hms_government;Shimazu;;;;;;;;;;;;;
 SAT_absolute_monarchy_ADJ;Shimazu;;;;;;;;;;;;;
 SAT_prussian_constitutionalism_ADJ;Shimazu;;;;;;;;;;;;;
 SAT_hms_government_ADJ;Shimazu;;;;;;;;;;;;;
@@ -1978,12 +1978,12 @@ SAV;Saint Vincent;;;;;;;;;;;;;
 SAV_ADJ;Vincentian;;;;;;;;;;;;;
 SEN;Tohoku;;;;;;;;;;;;;
 SEN_ADJ;Tohokuan;;;;;;;;;;;;;
-SEN_absolute_monarchy;Sendai;;;;;;;;;;;;;
-SEN_prussian_constitutionalism;Sendai;;;;;;;;;;;;;
-SEN_hms_government;Sendai;;;;;;;;;;;;;
-SEN_absolute_monarchy_ADJ;Date;;;;;;;;;;;;;
-SEN_prussian_constitutionalism_ADJ;Date;;;;;;;;;;;;;
-SEN_hms_government_ADJ;Date;;;;;;;;;;;;;
+SEN_absolute_monarchy;Satake;;;;;;;;;;;;;
+SEN_prussian_constitutionalism;Satake;;;;;;;;;;;;;
+SEN_hms_government;Satake;;;;;;;;;;;;;
+SEN_absolute_monarchy_ADJ;Satake;;;;;;;;;;;;;
+SEN_prussian_constitutionalism_ADJ;Satake;;;;;;;;;;;;;
+SEN_hms_government_ADJ;Satake;;;;;;;;;;;;;
 SAK;Siak;;;;;;;;;;;;;
 SAK_ADJ;Siak;;;;;;;;;;;;;
 SIB;Siberian Republic;;;;;;;;;;;;;
@@ -2211,8 +2211,8 @@ TAS_radical;Radical Liberals;Radical Liberals;Radical Liberals;;;;;;;;;;;
 TAS_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
 TCA;Transcaucasia;;;;;;;;;;;;;
 TCA_ADJ;Transcaucasian;;;;;;;;;;;;;
-TKG;Tokugawa;;;;;;;;;;;;;
-TKG_ADJ;Tokugawa;;;;;;;;;;;;;
+TKG;Hojo;;;;;;;;;;;;;
+TKG_ADJ;Hojo;;;;;;;;;;;;;
 TKG_reactionary;Tokugawa-shi;;;;;;;;;;;;;
 TKG_fascist;Kokuryukai;;;;;;;;;;;;;
 TKS;Turkestan;;;;;;;;;;;;;
@@ -2256,14 +2256,14 @@ TOG_socialist;Party of Togolese Unity;;;;;;;;;;;;;
 TOG_radical;Rally of Young Togolese;;;;;;;;;;;;;
 TOG_communist;Juvento;;;;;;;;;;;;;
 TOG_fascist;Togolese People's Movement;;;;;;;;;;;;;
-TOS;Shikoku;;;;;;;;;;;;;
-TOS_ADJ;Shikokuan;;;;;;;;;;;;;
-TOS_absolute_monarchy;Tosa;;;;;;;;;;;;;
-TOS_prussian_constitutionalism;Tosa;;;;;;;;;;;;;
-TOS_hms_government;Tosa;;;;;;;;;;;;;
-TOS_absolute_monarchy_ADJ;Yamauchi;;;;;;;;;;;;;
-TOS_prussian_constitutionalism_ADJ;Yamauchi;;;;;;;;;;;;;
-TOS_hms_government_ADJ;Yamauchi;;;;;;;;;;;;;
+TOS;Toyotomi;;;;;;;;;;;;;
+TOS_ADJ;Toyotomi;;;;;;;;;;;;;
+TOS_absolute_monarchy;Toyotomi;;;;;;;;;;;;;
+TOS_prussian_constitutionalism;Toyotomi;;;;;;;;;;;;;
+TOS_hms_government;Toyotomi;;;;;;;;;;;;;
+TOS_absolute_monarchy_ADJ;Toyotomi;;;;;;;;;;;;;
+TOS_prussian_constitutionalism_ADJ;Toyotomi;;;;;;;;;;;;;
+TOS_hms_government_ADJ;Toyotomi;;;;;;;;;;;;;
 TOU_conservative;Caliph's Faction;;;;;;;;;;;;;
 TOU_reactionary;Caliph's Faction;;;;;;;;;;;;;
 TOU_theocracy;Tidjaniya Caliphate;;;;;;;;;;;;;
@@ -2553,11 +2553,11 @@ YUC_radical;Partido Radical;Partido Radical;Partido Radical;;;;;;;;;;;
 YUC_socialist;Partido Socialist;Partido socialiste;Partido Socialist;;;;;;;;;;;
 YUC_communist;Partido Communist;Partido communiste;Partido Communist;;;;;;;;;;;
 YUC_fascist;Partido Fascist;Partido fasciste;Partido Fascist;;;;;;;;;;;
-YZW;Yonezawa;;;;;;;;;;;;;
-YZW_ADJ;Yonezawan;;;;;;;;;;;;;
-YZW_absolute_monarchy_ADJ;Uesugi;;;;;;;;;;;;;
-YZW_prussian_constitutionalism_ADJ;Uesugi;;;;;;;;;;;;;
-YZW_hms_government_ADJ;Uesugi;;;;;;;;;;;;;
+YZW;Ashina;;;;;;;;;;;;;
+YZW_ADJ;Ashinan;;;;;;;;;;;;;
+YZW_absolute_monarchy_ADJ;Ashina;;;;;;;;;;;;;
+YZW_prussian_constitutionalism_ADJ;Ashina;;;;;;;;;;;;;
+YZW_hms_government_ADJ;Ashina;;;;;;;;;;;;;
 ZAM;Zambia;;;;;;;;;;;;;
 ZAM_ADJ;Zambian;;;;;;;;;;;;;
 ZAM_liberal;United Party for National Development;;;;;;;;;;;;;
