some loc for provinces

--- a/KOS/localisation/0000_IranRework.csv
+++ b/KOS/localisation/0000_IranRework.csv
@@ -71,9 +71,9 @@ RSH;Pamir;;;;;;;;;;;;;
 RSH_ADJ;Pamiri;;;;;;;;;;;;;
 PROV921;Pteria'ta;;;;;;;;;;;;;
 PROV934;Diwaniyah;;;;;;;;;;;;;
-PROV1049;Novorossiysk;;;;;;;;;;;;;
-PROV1099;Alexandropol;;;;;;;;;;;;;
-PROV1105;Yelizavetpol;;;;;;;;;;;;;
+PROV1049;Bata;;;;;;;;;;;;;
+PROV1099;Gyumri;;;;;;;;;;;;;
+PROV1105;Gandzak;;;;;;;;;;;;;
 PROV1119;Ilam;;;;;;;;;;;;;
 PROV1127;Esfahan;;;;;;;;;;;;;
 PROV1128;Soltanabad;;;;;;;;;;;;;
@@ -101,12 +101,10 @@ PROV3292;Fallujah;;;;;;;;;;;;;
 PROV3316;Ilisu;;;;;;;;;;;;;
 PROV3323;Karimabad;;;;;;;;;;;;;
 PROV3325;Amsat'vlur;;;;;;;;;;;;;
-PROV3348;Maku;;;;;;;;;;;;;
 PROV3350;Qa'in;;;;;;;;;;;;;
 PROV3352;Qasr-e Shirin;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
-PROV3386;Shamakhi;;;;;;;;;;;;;
 PROV3389;al-Qa'im;;;;;;;;;;;;;
 PROV3406;al-Jahra;;;;;;;;;;;;;
 PROV3428;al-Raqqa;;;;;;;;;;;;;
@@ -118,8 +116,8 @@ PROV3499;Sarakhs;;;;;;;;;;;;;
 PROV3500;Qochen;;;;;;;;;;;;; 
 PROV3501;Gonbad-e Kavus;;;;;;;;;;;;; 
 PROV3502;Dehestan;;;;;;;;;;;;;
-PROV3503;Parsabad;;;;;;;;;;;;;
-PROV3504;Marand;;;;;;;;;;;;;
+PROV3503;Parskerena;;;;;;;;;;;;;
+PROV3504;Maranda;;;;;;;;;;;;;
 PROV3505;Balkhan;;;;;;;;;;;;;
 PROV3506;Kharan;;;;;;;;;;;;;
 PROV3507;Panjgur;;;;;;;;;;;;;
@@ -144,20 +142,20 @@ PROV3525;Gilgit;;;;;;;;;;;;;
 PROV3526;Baghran;;;;;;;;;;;;;
 PROV3527;Tashkurgan;;;;;;;;;;;;;
 PROV3537;Mhush;;;;;;;;;;;;;
-PROV3536;Bayazid;;;;;;;;;;;;;
-PROV3535;Lazistan;;;;;;;;;;;;;
+PROV3536;Daroynk';;;;;;;;;;;;;
+PROV3535;Lazona;;;;;;;;;;;;;
 PROV3534;Karum;;;;;;;;;;;;;
 PROV3533;Ani-Kamakh;;;;;;;;;;;;;
 PROV3532;Sinjar;;;;;;;;;;;;;
 PROV3531;Kogoniya;;;;;;;;;;;;;
-PROV3530;Shirvan;;;;;;;;;;;;;
+PROV3530;Marzpety;;;;;;;;;;;;;
 PROV3529;Sar-e Pol;;;;;;;;;;;;;
 PROV3528;Ghur;;;;;;;;;;;;;
 PROV3538;Quetta;;;;;;;;;;;;;
 PROV3390;Grozny;;;;;;;;;;;;;
 PROV1055;Shali;;;;;;;;;;;;;
 RUS_1102;Shirvan;;;;;;;;;;;;;
-AZB_1105;Arran;;;;;;;;;;;;;
+AZB_1105;Gandzak;;;;;;;;;;;;;
 PER_1112;Azarbayjan-e Sharqi;;;;;;;;;;;;;
 PER_3353;Azarbayjan-e Qarbi;;;;;;;;;;;;;
 PER_3350;Qa'inat;;;;;;;;;;;;;
