--- a/KOS/localisation/000_persia_map.csv
+++ b/KOS/localisation/000_persia_map.csv
@@ -46,7 +46,7 @@ PROV961;Chelm;;;;;;;;;;;;;
 PROV969;Starodub;;;;;;;;;;;;;
 PROV971;Elisavetgrad;;;;;;;;;;;;;
 PROV974;Priluki;;;;;;;;;;;;;
-PROV975;Slavyansk;;;;;;;;;;;;;
+PROV975;Tor;;;;;;;;;;;;;
 PROV981;Arkhagelsk;;;;;;;;;;;;;
 PROV1020;Nizhny Novgorod;;;;;;;;;;;;;
 PROV1028;Vyatka;;;;;;;;;;;;;
