--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -15,10 +15,12 @@ PROV3432;Cavaillon;;;;;;;;;;;;;
 PROV3433;Vielha;;;;;;;;;;;;;
 PROV3434;Bardonecchia;;;;;;;;;;;;;
 PROV3435;Balme;;;;;;;;;;;;;
-PROV3436;Yevpatoria;;;;;;;;;;;;;
-PROV3437;Dzhankoi;;;;;;;;;;;;;
+PROV964;Akcirkey;;;;;;;;;;;;;
+PROV966;Keriç;;;;;;;;;;;;;
+PROV3436;Kezlev;;;;;;;;;;;;;
+PROV3437;Canköy;;;;;;;;;;;;;
 PROV3438;Yalta;;;;;;;;;;;;;
-PROV3439;Feodosia;;;;;;;;;;;;;
+PROV3439;Kefe;;;;;;;;;;;;;
 PROV3440;Yanbian;;;;;;;;;;;;;
 PROV3441;Gazli;;;;;;;;;;;;;
 PROV3442;Darvaza;;;;;;;;;;;;;
@@ -64,7 +66,7 @@ PROV3390;Kidero;;;;;;;;;;;;;
 PROV3389;Botlikh;;;;;;;;;;;;;
 PROV3388;Makhachkala;;;;;;;;;;;;;
 PROV3387;Urkarakh;;;;;;;;;;;;;
-PROV3386;Qobustan;;;;;;;;;;;;;
+PROV3386;Haykategh;;;;;;;;;;;;;
 PROV3385;Quba;;;;;;;;;;;;;
 PROV3384;Kurakh;;;;;;;;;;;;;
 PROV3383;Turnhout;;;;;;;;;;;;;
@@ -78,8 +80,8 @@ PROV3376;Potsdam;;;;;;;;;;;;;
 PROV3375;Roda;;;;;;;;;;;;;
 PROV3374;Sabac;;;;;;;;;;;;;
 PROV3373;Filibe;;;;;;;;;;;;;
-PROV3372;Sulina;;;;;;;;;;;;;
-PROV3371;Mangalia;;;;;;;;;;;;;
+PROV3372;Shulinya;;;;;;;;;;;;;
+PROV3371;Panglikalya;;;;;;;;;;;;;
 PROV3370;Fenyovár;;;;;;;;;;;;;
 PROV3369;Firjuza;;;;;;;;;;;;;
 PROV3368;Ivangorod;;;;;;;;;;;;;
@@ -102,7 +104,7 @@ PROV3352;Khurmal;;;;;;;;;;;;;
 PROV3351;Mahshahr;;;;;;;;;;;;;
 PROV3350;Ganaveh;;;;;;;;;;;;;
 PROV3349;Izeh;;;;;;;;;;;;;
-PROV3348;Mousiyan;;;;;;;;;;;;;
+PROV3348;Artaz;;;;;;;;;;;;;
 PROV3347;Jagodina;;;;;;;;;;;;;
 PROV3346;Krusevac;;;;;;;;;;;;;
 PROV3345;Sis;;;;;;;;;;;;;
@@ -161,7 +163,7 @@ PROV3296;Lubumbashi;;;;;;;;;;;;;
 PROV3295;Pematang Siantar;;;;;;;;;;;;;
 PROV1235;Shimla;;;;;;;;;;;;;
 DEN_251;Island & Grønland;;;;;;;;;;;;;
-TUR_887;Erzurum;;;;;;;;;;;;;
+TUR_887;Karno K'aghak';;;;;;;;;;;;;
 TAJ_1208;Tadzhikistan;;;;;;;;;;;;;
 PROV308;Ålesund;;;;;;;;;;;;;
 PROV306;Bodø;;;;;;;;;;;;;
@@ -175,7 +177,7 @@ PROV839;Náfplion;;;;;;;;;;;;;
 PROV840;Kórinthos;;;;;;;;;;;;;
 AUS_624;Burgenland;;;;;;;;;;;;;
 PROV368;Vamdrup;;;;;;;;;;;;;
-PROV2548;Igdir;;;;;;;;;;;;;
+PROV2548;Tsolakert;;;;;;;;;;;;;
 PROV1179;al-Hudaydah;;;;;;;;;;;;;
 PROV1841;al-Fashir;;;;;;;;;;;;;
 PROV928;Rewanduz;;;;;;;;;;;;;
@@ -193,7 +195,7 @@ PROV509;Sevilla;;;;;;;;;;;;;
 PROV677;Akerman;;;;;;;;;;;;;
 PROV834;Athina;;;;;;;;;;;;;
 PROV3293;Smpadapert;;;;;;;;;;;;;
-PROV3294;Gosarto;;;;;;;;;;;;;
+PROV3294;Verinkghzin;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
@@ -429,6 +431,9 @@ ENG_2497;Semnyradeyjunlanða;;;;;;;;;;;;
 ENG_2505;Northern Territory;;;;;;;;;;;;
 RUS_973;Kherson-Zaporizhia;;;;;;;;;;;;;
 RUS_955;Yekaterinoslav;;;;;;;;;;;;;
+PROV674;Kjustenca;;;;;;;;;;;;
+PROV675;Tultshija;;;;;;;;;;;;
+PROV976;Cyltigzlek;;;;;;;;;;;;
 PROV3107;Lake Baikal;;;;;;;;;;;;;
 PROV2589;Tsushima;;;;;;;;;;;;;
 PROV1724;Shetland;;;;;;;;;;;;;
@@ -516,7 +521,7 @@ PROV2591;Tranquebar;;;;;;;;;;;;;
 PROV2625;North West River;;;;;;;;;;;;;
 PROV2580;Novaya Ladoga;;;;;;;;;;;;;
 PROV995;Petrozavodsk;;;;;;;;;;;;;
-PROV965;Kherson;;;;;;;;;;;;;
+PROV965;Jarson;;;;;;;;;;;;;
 PROV1048;Yekaterinodar;;;;;;;;;;;;;
 PROV1045;Migulinskaya;;;;;;;;;;;;;
 PROV950;Ungvár;;;;;;;;;;;;;
@@ -572,10 +577,10 @@ PROV1290;Umerkot;;;;;;;;;;;;;
 USA_1;Alyaska;;;;;;;;;;;;;
 KOK_1190;Alay;;;;;;;;;;;;;
 PROV892;Fermak'aghak;;;;;;;;;;;;;
-PROV924;Arbaylu;;;;;;;;;;;;;
+PROV924;Barderk’ag;;;;;;;;;;;;;
 PROV925;Sulaymania;;;;;;;;;;;;;
 PROV1110;Chihriq;;;;;;;;;;;;;
-PROV2414;Yasira;;;;;;;;;;;;;
+PROV2414;T'erakghzi;;;;;;;;;;;;;
 PROV914;Trablos;;;;;;;;;;;;;
 PROV1469;Uriankhai;;;;;;;;;;;;;
 PROV1181;Akmolinsk;;;;;;;;;;;;;
