--- a/KOS/localisation/darkness.csv
+++ b/KOS/localisation/darkness.csv
@@ -212,7 +212,7 @@ RUS_1079;Trans-Baikal;Trans-Baikal;Transbaikal;;Trans-Baikal;;;;;;;;;
 RUS_1069;West Yakutsk;West Yakutsk;West Yakutsk;;West Yakutsk;;;;;;;;;
 RUS_1071;Yakutsk;Yakutsk;Yakutsk;;Yakutsk;;;;;;;;;
 RUS_2668;North Yakutsk;North Yakutsk;Nord-Yakutsk;;North Yakutsk;;;;;;;;;
-TUR_885;Kars;Kars;Kars;;Kars;;;;;;;;;
+TUR_885;Ghars;Ghars;Ghars;;Ghars;;;;;;;;;
 TUR_884;Trabzon;Trabzon;Trabzon;;Trabzon;;;;;;;;;
 TUR_881;Atana;Atana;Atana;;Atana;;;;;;;;;
 TUR_868;Phrygia;Phrygia;Phrygia;;Phrygia;;;;;;;;;
