--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9139,8 +9139,6 @@ PROV669;Calarasi;Calarasi;Calarasi;;Calarasi;;;;;;;;
 PROV670;Iasi;Iasi;Iasi;;Iasi;;;;;;;;
 PROV671;Botosani;Botosani;Botosani;;Botosani;;;;;;;;
 PROV672;Bacau;Bacau;Bacau;;Bacau;;;;;;;;
-PROV674;Constanta;Constanta;Constanta;;Constantsa;;;;;;;;
-PROV675;Tulcea;Tulcea;Tulcea;;Tulcea;;;;;;;;
 PROV676;Chisinau;Chisinau;Chisinau;;Chisinau;;;;;;;;
 PROV678;Izmail;Izmail;Izmail;;Izmail;;;;;;;;
 PROV679;Kolberg;Kolberg;Kolberg;;Kolberg;;;;;;;;
@@ -9257,7 +9255,7 @@ PROV814;Varna;Varna;Varna;;Varna;;;;;;;;
 PROV815;Plovdiv;Plovdiv;Plovdiv;;Plovdiv;;;;;;;;
 PROV816;Stara Zagora;Stara Zagora;Stara Zagora;;Stara Zagora;;;;;;;;
 PROV817;Burgas;Bourgas;Burgas;;Burgas;;;;;;;;
-PROV818;Silistre;Silistre;Silistre;;Silistre;;;;;;;;
+PROV818;Silishra;Silishra;Silishra;;Silishra;;;;;;;;
 PROV819;Florina;Florina;Florina;;Florina;;;;;;;;
 PROV820;Grevena;Grevena;Grevena;;Greven?;;;;;;;;
 PROV821;Edessa;Edessa;Edessa;;Edessa;;;;;;;;
@@ -9312,22 +9310,23 @@ PROV881;Heraclea Pontica;Heraclea Pontica;Heraclea Pontica;;Heraclea Pontica;;;;
 PROV882;Trapezounta;Trapezounta;Trapezounta;;Trapezounta;;;;;;;;
 PROV883;Sinope;Sinope;Sinope;;Sinope;;;;;;;;
 PROV884;Kerasous;Kerasous;Kerasous;;Kerasous;;;;;;;;
-PROV885;Kars;Kars;Kars;;Kars;;;;;;;;
-PROV886;Ardahan;Ardahan;Ardahan;;Ardahan;;;;;;;;
-PROV887;Erzurum;Erzurum;Erzurum;;Erzurum;;;;;;;;
+PROV885;Ghars;Ghars;Ghars;;Ghars;;;;;;;;
+PROV886;Gugark;Gugark;Gugark;;Gugark;;;;;;;;
+PROV887;Karno K'aghak';Karno K'aghak';Karno K'aghak';;Karno K'aghak';;;;;;;;
+PROV887;Karno K'aghak';Karno K'aghak';Karno K'aghak';;Karno K'aghak';;;;;;;;
 PROV888;Yekeghiats;Yekeghiats;Yekeghiats;;Yekeghiats;;;;;;;;
 PROV889;Malat'ya;Malatya;Malatya;;Malatya;;;;;;;;
 PROV890;Tosp;Tosp;Tosp;;Tosp;;;;;;;;
 PROV891;Baghesh;Baghesh;Baghesh;;Baghesh;;;;;;;;
 PROV893;Tigranakert;Tigranakert;Tigranakert;;Tigranakert;;;;;;;;
-PROV894;Adana;Adana;Adana;;Adana;;;;;;;;
+PROV894;Atana;Atana;Atana;;Atana;;;;;;;;
 PROV895;Mersin;Mersin;Mersin;;Mersin;;;;;;;;
-PROV896;Marash;Marash;Marash;;Marash;;;;;;;;
+PROV896;Kurkuma;Kurkuma;Kurkuma;;Kurkuma;;;;;;;;
 PROV897;Halab;Halab;Halab;;Halab;;;;;;;;
 PROV898;Aintab;Aintab;Aintab;;Aintab;;;;;;;;
 PROV899;Yedessa;Yedessa;Yedessa;;Yedessa;;;;;;;;
 PROV900;Antiok';Antiok';Antiok';;Antiok';;;;;;;;
-PROV901;Dayr al-Zour;Dayr al-Zour;Dayr al-Zour;;Dayr al-Zour;;;;;;;;
+PROV901;Vank'ag;Vank'ag;Vank'ag;;Vank'ag;;;;;;;;
 PROV902;Dammeseq;Dammeseq;Dammeseq;;Dammeseq;;;;;;;;
 PROV903;Hmt-Swba;Hmt-Swba;Hmt-Swba;;Hmt-Swba;;;;;;;;
 PROV904;Hama;Hama;Hama;;Hama;;;;;;;;
@@ -9367,13 +9366,10 @@ PROV954;Vinnitsa;Vinnitsa;Vinnitsa;;Vinnitsa;;;;;;;;
 PROV957;Kovel;Kovel;Kovel;;Kovel;;;;;;;;
 PROV962;Chernigov;Chernigov;Chernigov;;Chernihiv;;;;;;;;
 PROV963;Poltava;Poltava;Poltava;;Poltava;;;;;;;;
-PROV964;Simferopol;Simferopol;Simferopol;;Simferópol;;;;;;;;
-PROV966;Kerch;Kertch;Kerch;;Kerch;;;;;;;;
-PROV967;Sevastopol;Sébastopol;Sevastopol;;Sebastopol;;;;;;;;
+PROV967;Aqyar;Aqyar;Aqyar;;Aqyar;;;;;;;;
 PROV968;Odessa;Odessa;Odessa;;Odesa;;;;;;;;
 PROV970;Nikolaev;Nikolaev;Nikolaev;;Nikolaev;;;;;;;;
-PROV973;Melitopol;Melitopol;Melitopol;;Melitopol;;;;;;;;
-PROV976;Mariupol;Mariupol;Mariupol;;Mariupol;;;;;;;;
+PROV973;Kyzyl-Yar;Kyzyl-Yar;Kyzyl-Yar;;Kyzyl-Yar;;;;;;;;
 PROV977;Kursk;Koursk;Kursk;;Kursk;;;;;;;;
 PROV979;Rostov;Rostov;Rostov;;Rostov;;;;;;;;
 PROV982;Petsamo;Petsamo;Petsamo;;Petsamo;;;;;;;;
@@ -9462,17 +9458,15 @@ PROV1094;Poti;Poti;Poti;;Poti;;;;;;;;
 PROV1096;Batum;Batum;Batum;;Batum;;;;;;;;
 PROV1097;New Caledonia;Nouvelle-Calédonie;Neukaledonien;;Nueva Caledonia;;;;;;;;
 PROV1098;Yerevan;Yerevan;Yerevan;;Yerevan;;;;;;;;
-PROV1099;Gyumri;Gyumri;Gyumri;;Gyumri;;;;;;;;
 PROV1100;Kapan;Kapan;Kapan;;Kapan;;;;;;;;
 PROV1101;Nakhichevan;Nakhitchevan;Nakhichevan;;Nakhichevan;;;;;;;;
 PROV1102;Baku;Baku;Baku;;Bak?;;;;;;;;
 PROV1103;Siyazen;Siyazen;Siyazen;;Siyazen;;;;;;;;
-PROV1104;Sheki;Sheki;Sheki;;Sheki;;;;;;;;
-PROV1105;Ganja;Ganja;Ganja;;Ganja;;;;;;;;
-PROV1106;Agdam;Agdam;Agdam;;Agdam;;;;;;;;
-PROV1107;Lankaran;Lankaran;Lankaran;;Lankaran;;;;;;;;
+PROV1104;Sakerk'ag;Sakerk'ag;Sakerk'ag;;Sakerk'ag;;;;;;;;
+PROV1106;Akna;Akna;Akna;;Akna;;;;;;;;
+PROV1107;Yezakitun;Yezakitun;Yezakitun;;Yezakitun;;;;;;;;
 PROV1108;Tabriz;Tabriz;Tabriz;;Tabrîz;;;;;;;;
-PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;
+PROV1109;Gher;Gher;Gher;;Gher;;;;;;;;
 PROV1111;Mahabad;Mahabad;Mahabad;;Mahabad;;;;;;;;
 PROV1112;Ardabil;Ardabil;Ardabil;;Ardebil;;;;;;;;
 PROV1113;Rasht;Rasht;Rasht;;Rasht;;;;;;;;
