Africa provinces (positions to do)

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1231,3 +1231,19 @@ PROV3729;Hangean-seom;;;;;;;;;;;;;
 PROV3730;Oejel-ui Sinjeon;;;;;;;;;;;;;
 PROV3731;Hyeongean;;;;;;;;;;;;;
 PROV3732;Bulagoneun;;;;;;;;;;;;;
+PROV3733;Abakwa;;;;;;;;;;;;;
+PROV3734;Garoua;;;;;;;;;;;;;
+PROV3735;Shanga;;;;;;;;;;;;;
+PROV3736;Kontagora;;;;;;;;;;;;;
+PROV3737;Zuru;;;;;;;;;;;;;
+PROV3738;Tahoua;;;;;;;;;;;;;
+PROV3739;Gusau;;;;;;;;;;;;;
+PROV3740;Agadez;;;;;;;;;;;;;
+PROV3741;Ouedda;;;;;;;;;;;;;
+PROV3742;Tamdjert;;;;;;;;;;;;;
+PROV3743;Aozou;;;;;;;;;;;;;
+PROV3744;Zouar;;;;;;;;;;;;;
+PROV3745;Gezzam;;;;;;;;;;;;;
+PROV3746;Tambura;;;;;;;;;;;;;
+PROV3747;Teggargrent;;;;;;;;;;;;;
+PROV3748;Tugurt;;;;;;;;;;;;;
