--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9936,7 +9936,7 @@ PROV1706;Mustaghanim;Mostaganem;Mustaghanim;;Mustaghanim;;;;;;;;
 PROV1707;Mascara;Mascara;Mascara;;Mascara;;;;;;;;
 PROV1708;Constantine;Constantine;Constantine;;Constantina;;;;;;;;
 PROV1710;Biskra;Biskra;Biskra;;Biskra;;;;;;;;
-PROV1711;Ouargla;Ouargla;Ouargla;;Ouargla;;;;;;;;
+PROV1711;Tedjahert;Tedjahert;Tedjahert;;Tedjahert;;;;;;;;
 PROV1712;Tuggurt;Touggourt;Tuggurt;;Tuggurt;;;;;;;;
 PROV1713;Laghwat;Laghwat;Laghwat;;Laghwat;;;;;;;;
 PROV1715;Naama;Naâma;Naama;;Naama;;;;;;;;
