--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9937,8 +9937,8 @@ PROV1707;Mascara;Mascara;Mascara;;Mascara;;;;;;;;
 PROV1708;Constantine;Constantine;Constantine;;Constantina;;;;;;;;
 PROV1710;Biskra;Biskra;Biskra;;Biskra;;;;;;;;
 PROV1711;Tedjahert;Tedjahert;Tedjahert;;Tedjahert;;;;;;;;
-PROV1712;Tuggurt;Touggourt;Tuggurt;;Tuggurt;;;;;;;;
-PROV1713;Laghwat;Laghwat;Laghwat;;Laghwat;;;;;;;;
+PROV1712;Laghouat;Laghouat;Laghouat;;Laghouat;;;;;;;;
+PROV1713;Djelfa;Djelfa;Djelfa;;Djelfa;;;;;;;;
 PROV1715;Naama;Naâma;Naama;;Naama;;;;;;;;
 REMOVE_PROV1723;Colon;Canal de Panama ;Panamakanal;;Colón;;;;;;;;
 PROV1725;Tunis;Tunis;Tunis;;Túnez;;;;;;;;
