--- a/KOS/localisation/000_persia_map.csv
+++ b/KOS/localisation/000_persia_map.csv
@@ -110,19 +110,19 @@ PROV1444;Maarjalinn;;;;;;;;;;;;;
 PROV1445;Sorbian;;;;;;;;;;;;;
 PROV1446;Dili;;;;;;;;;;;;;
 PROV1594;Kashgar;;;;;;;;;;;;;
-PROV1716;Banjoemas & Bagelen;;;;;;;;;;;;;
-PROV1717;Mangkoenegara;;;;;;;;;;;;;
-PROV1718;Pematang Siantar;;;;;;;;;;;;;
-PROV1719;Billiton;;;;;;;;;;;;;
-PROV1720;Sitioeng;;;;;;;;;;;;;
-PROV1721;Madras;;;;;;;;;;;;;
-PROV1722;Gajo-Alas;;;;;;;;;;;;;
+PROV1716;Tabelbala;;;;;;;;;;;;;
+PROV1717;Kherrata;;;;;;;;;;;;;
+PROV1718;Tanezrouft;;;;;;;;;;;;;
+PROV1719;Tawendert;;;;;;;;;;;;;
+PROV1720;Taghit;;;;;;;;;;;;;
+PROV1721;Igilgili;;;;;;;;;;;;;
+PROV1722;Adrar;;;;;;;;;;;;;
 PROV1739;Western Libyan Desert;;;;;;;;;;;;;
-PROV1740;Bonjol;;;;;;;;;;;;;
+PROV1740;Isuknen;;;;;;;;;;;;;
 PROV1758;Eastern Libyan Desert;;;;;;;;;;;;;
-PROV1774;Bangkinang;;;;;;;;;;;;;
-PROV1779;Langkat;;;;;;;;;;;;;
-PROV1782;Asahan;;;;;;;;;;;;;
+PROV1774;Eddaxla;;;;;;;;;;;;;
+PROV1779;Kiffa;;;;;;;;;;;;;
+PROV1782;Zouerat;;;;;;;;;;;;;
 PROV1801;El Hodh;;;;;;;;;;;;;
 PROV1804;Hamdallahi;;;;;;;;;;;;;
 PROV1807;Ogan;;;;;;;;;;;;;
@@ -130,9 +130,9 @@ PROV1808;Dosso;;;;;;;;;;;;;
 PROV1809;Lulama;;;;;;;;;;Temp, don't actually know where Lulama is;;;
 PROV1810;Say;;;;;;;;;;Temp, till something better is found;;;
 PROV1812;Djambi;;;;;;;;;;;;;
-PROV1813;Trankebar;;;;;;;;;;;;;
+PROV1813;Zemmouri;;;;;;;;;;;;;
 PROV1814;Bilma;;;;;;;;;;;;;
-PROV1817;Pulicat;;;;;;;;;;;;;
+PROV1817;Kutum;;;;;;;;;;;;;
 PROV1972;Mpongwe;;;;;;;;;;;;;
 PROV2244;Cocos Islands;;;;;;;;;;;;;
 PROV2564;Southern Libyan Desert;;;;;;;;;;;;;
@@ -140,7 +140,7 @@ PROV2586;Rub'al-Khali;;;;;;;;;;;;;
 NEJ_1157;Rub'al-Khali;;;;;;;;;;;;;
 PROV2599;Fairbanks;;;;;;;;;;;;;
 PROV2607;Taklimakan;;;;;;;;;;;;;
-PROV2609;Bima;;;;;;;;;;;;;
+PROV2609;Tawdenni;;;;;;;;;;;;;
 PROV2619;Kunduz;;;;;;;;;;;;;
 PROV2629;Sambalioeng;;;;;;;;;;;;;
 PROV2622;Soppeng;;;;;;;;;;;;;
