First africa crusaders and tuaregs

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -444,7 +444,9 @@ SOK_prussian_constitutionalism;The Sokoto Caliphate;;;;;;;;;;;;;
 SOK_hms_government;The Sokoto Caliphate;;;;;;;;;;;;;
 SOK_theocracy;The Sokoto Caliphate;;;;;;;;;;;;;
 SOK_conservative;Caliph's Faction;;;;;;;;;;;;;
-KBO_absolute_monarchy;Kanem Bornu;;;;;;;;;;;;;
+KBO_theocracy;Kanem Crusaders;;;;;;;;;;;;;
+KBO_democracy;Bornu Republic;;;;;;;;;;;;;
+KBO_absolute_monarchy;Kanem-Bornu;;;;;;;;;;;;;
 KBO_prussian_constitutionalism;Kanem–Bornu;;;;;;;;;;;;;
 KBO_hms_government;Kanem–Bornu;;;;;;;;;;;;;
 WAD_absolute_monarchy;Wadai;;;;;;;;;;;;;
@@ -2762,7 +2764,7 @@ JAL_communist;Communist Faction;Faction communiste;Die kommunistische Fraktion;;
 JAL_fascist;Fascist Faction;Faction fasciste;Die faschistische Fraktion;;;;;;;;;;;
 KBO;Bornu;Kanem-Bornu;Kanem-Bornu;;Kanem-Bornu;;;;;;;;;
 KBO_ADJ;Bornu;Bornu;Bornu;;;;;;;;;;;
-KBO_conservative;Mai Faction;Faction Mai;Mai Fraktion;;;;;;;;;;;
+KBO_conservative;Crusaders Faction;Faction Mai;Mai Fraktion;;;;;;;;;;;
 KBO_liberal;Reform Faction;Faction de réforme;Verbesserung Fraktion;;;;;;;;;;;
 KBO_reactionary;Religious Faction;Religieux Faction;Religiöse Fraktion;;;;;;;;;;;
 KBO_radical;Freedom Faction;Faction de liberté;Freiheits Fraktion;;;;;;;;;;;
