--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -240,6 +240,14 @@ SHH;Shahis;x;;;;
 SHH_ADJ;Shahis;x;;;;
 PNC;Pinancheou;x;;;;
 PNC_ADJ;Pinanchein;x;;;;
+KLA;Kel Ahaggar;x;;;;
+KLA_ADJ;Kel Ahaggar;x;;;;
+KDG;Kel Adagh;x;;;;
+KDG_ADJ;Kel Adagh;x;;;;
+KIR;Kel Aïr;x;;;;
+KIR_ADJ;Kel Aïr;x;;;;
+KJJ;Kel Ajjer;x;;;;
+KIR_ADJ;Kel Ajjer;x;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
